Tue Nov 13 18:17:24 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
          Bug_4055_Regression_Test needs threads

Tue Nov 13 13:29:28 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Condition_Attributes.h:
        * ace/Condition_Attributes.inl:
        * ace/Condition_Attributes.cpp:
          Now also needed in single threaded builds

Mon Nov 12 19:26:41 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Malloc.cpp:
        * ace/Naming_Context.h:
        * ace/Naming_Context.cpp:
        * ace/Read_Buffer.cpp:
        * ace/Recursive_Thread_Mutex.cpp:
        * ace/SV_Semaphore_Simple.cpp:
          Coverity fixes

Mon Nov 12 17:21:25 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.inl:
          Fixed win32 compile errors

Mon Nov 12 13:34:35 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Sig_Adapter.cpp:
          Fixed coverity errors

        * ace/Signal.h:
          Doxygen change

Mon Nov 12 12:19:18 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.inl:
          Fixed missing ACE_INLINE

Mon Nov 12 10:45:51 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.h:
        * ace/OS_NS_Thread.inl:
          Added constructor for ACE_event_t to initialize pointers
          explicitly to 0, fixes coverity #743165

        * tests/Bug_4055_Regression_Test.cpp:
          Check return value of clock_settime, fixes coverity #743164

Mon Nov 12 10:06:57 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * docs/Download.html:
        * docs/bczar/bczar.html:
        * etc/index.html:
          Updated for next release

Mon Nov 12 09:34:14 CET 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.1.6 released.

Sun Nov 11 14:26:17 UTC 2012  Martin Corino  <mcorino@remedy.nl>
