@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: ACE_XML_Utils
+Description: ACE XML Utilities Library
+Requires: ACE
+Version: @VERSION@
+Libs: -L${libdir} -lACE_XML_Utils
+Cflags: -I${includedir}
